# htcondor_workflow_example

./: .gitmodules  pyproject.toml  setup_custom_software_runtime.sh
custom_software/: Makefile
example/custom_software/: main
example/profiles/baf/profile/: config.yaml
examples/atlas/: condor-jobscript-lxplus.sh  example.root
examples/atlas/workflow/: Snakefile  config.yaml
examples/non_shared_fs/custom_software/: main.cpp  output.txt
examples/non_shared_fs/inputs/: input_symlink.txt
examples/non_shared_fs/profiles/baf/profile/: condor-jobscript.sh
examples/non_shared_fs/results/: write_local_fs.done
examples/non_shared_fs/workflow/: Snakefile  config.yaml
examples/non_shared_fs/workflow/software/: helloworld.smk
profiles/baf/profile/: config.yaml
profiles/htcondor-generic/: condor-jobscript.sh  config.yaml
profiles/lxplus/: config.yaml
workflow/: Snakefile  config.yaml
