[project]
name = "example-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "snakemake",
    "snakemake-interface-executor-plugins",
    "snakemake-executor-plugin-htcondor",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
example-workflow = { path = ".", editable = true }
snakemake = { path = "src/snakemake", editable = true }
snakemake-interface-executor-plugins = { path = "src/snakemake-interface-executor-plugins", editable = true }
snakemake-executor-plugin-htcondor = { path = "src/snakemake-executor-plugin-htcondor", editable = true }
